...
        <scene sceneID="WAl-zP-uDq">
            <objects>
                <viewController id="RoG-Zv-Wlo" customClass="HistoryViewController" customModule="RepCheck" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="3xR-cV-cc9">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
...
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" usesAttributedText="YES" borderStyle="roundedRect" placeholder="Recommended" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Bym-cF-Nqg">
                                        <rect key="frame" x="184" y="20" width="179" height="30"/>
                                        <accessibility key="accessibilityConfiguration" identifier="firstnamebox">
                                            <bool key="isElement" value="YES"/>
                                        </accessibility>
...
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" usesAttributedText="YES" borderStyle="roundedRect" placeholder="Optional" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="tBU-3t-dpZ">
                                        <rect key="frame" x="184" y="78" width="179" height="30"/>
                                        <accessibility key="accessibilityConfiguration" identifier="middlenamebox">
                                            <bool key="isElement" value="YES"/>
                                        </accessibility>
...
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" usesAttributedText="YES" borderStyle="roundedRect" placeholder="Recommended" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="0AE-c4-Qg2">
                                        <rect key="frame" x="185" y="127" width="179" height="30"/>
                                        <accessibility key="accessibilityConfiguration" identifier="surnamebox">
                                            <bool key="isElement" value="YES"/>
                                        </accessibility>
...
                                        <rect key="frame" x="47" y="218" width="280" height="110"/>
                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                        <accessibility key="accessibilityConfiguration" identifier="countrypicker">
                                            <bool key="isElement" value="YES"/>
                                        </accessibility>
...
                                <accessibility key="accessibilityConfiguration" identifier="nextbutton1"/>
                                <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
                                <state key="normal" title="Next →">
                                    <color key="titleColor" red="0.99999600649999998" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                </state>
...
                                <accessibility key="accessibilityConfiguration" identifier="resetbutton1"/>
                                <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
                                <state key="normal" title="Reset">
                                    <color key="titleColor" red="0.99999600649999998" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                </state>
...
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" usesAttributedText="YES" borderStyle="roundedRect" placeholder="Recommended" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="n0g-2E-A87">
                                        <rect key="frame" x="20" y="48" width="343" height="30"/>
                                        <accessibility key="accessibilityConfiguration" identifier="townbox"/>
                                        <attributedString key="attributedText"/>
                                        <textInputTraits key="textInputTraits" autocapitalizationType="words" spellCheckingType="no" returnKeyType="done"/>
...
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" usesAttributedText="YES" borderStyle="roundedRect" placeholder="Optional" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="xHV-cR-6jm">
                                        <rect key="frame" x="20" y="113" width="343" height="30"/>
                                        <accessibility key="accessibilityConfiguration" identifier="workbox"/>
                                        <attributedString key="attributedText"/>
                                        <textInputTraits key="textInputTraits" autocapitalizationType="words" spellCheckingType="no" returnKeyType="done"/>
...
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" usesAttributedText="YES" borderStyle="roundedRect" placeholder="Optional" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="v1s-Oc-wgU">
                                        <rect key="frame" x="20" y="179" width="343" height="30"/>
                                        <accessibility key="accessibilityConfiguration" identifier="schoolbox"/>
                                        <attributedString key="attributedText"/>
                                        <textInputTraits key="textInputTraits" autocapitalizationType="words" spellCheckingType="no" returnKeyType="done"/>
...
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" usesAttributedText="YES" borderStyle="roundedRect" placeholder="Optional" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Cxl-2n-6d4">
                                        <rect key="frame" x="20" y="245" width="343" height="30"/>
                                        <accessibility key="accessibilityConfiguration" identifier="otherbox"/>
                                        <attributedString key="attributedText"/>
                                        <textInputTraits key="textInputTraits" spellCheckingType="no" returnKeyType="done"/>
...
                                <accessibility key="accessibilityConfiguration" identifier="backButton"/>
                                <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
                                <state key="normal" title="← Back">
                                    <color key="titleColor" red="0.99999600649999998" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                </state>
...
                                    <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="m0P-QG-Kg9">
                                        <rect key="frame" x="314" y="313" width="51" height="31"/>
                                        <accessibility key="accessibilityConfiguration" identifier="youtubeswitch"/>
                                    </switch>
