...
        }
        //if clear history selected.
        if indexPath.row == 0{
            //new alert for showing about
            let alertController = UIAlertController(title: "Delete all search history", message: "Are you sure you want to delete all previous search history? This cannot be undone.", preferredStyle: .alert)
            
            let  OKButton = UIAlertAction(title: "Yes", style: .destructive, handler: { (action) -> Void in
                self.model.options.doOption(optionNum: indexPath.row)
            })
            let  NoButton = UIAlertAction(title: "No", style: .destructive, handler: { (action) -> Void in
              
            })
            
...
